<resources>
    <string name="error_psw_mail">Invalid password or email</string>
    <string name="error_login">Authentication error</string>
    <string name="error_contact">Invalid login ID</string>
    <string name="error_server">Something went wrong</string>

    <string name="publicKeySharedPref">publicKey</string>
    <string name="privateKeySharedPref">privateKey</string>
    <string name="userIDSharedPref" translatable="false">userID</string>
    <string name="nicknameSharedPref" translatable="false">nickname</string>
    <string name="AESKeySharedPref" translatable="false">AESKey</string>


    <string name="app_name">Crypt\'UrMess</string>
    <string name="nb_messages">text</string>
    <string name="research" >research</string>
    <string name="hint_research">search</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="id">login ID</string>
    <string name="username">Username</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="error_mail">Invalid email</string>
    <string name="send">send</string>
    <string name="enter_message">Enter message</string>
    <string name="unknown">Unknown</string>
    <string name="your_id">Your login ID : </string>
    <string name="id_copied">ID copied</string>
    <string name="logout">Logout</string>
    <string name="delete_contact">Delete</string>
    <string name="rename_contact">Rename</string>
    <string name="new_name_str">New name</string>

</resources>