<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/login_activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:id="@+id/l_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/l_login_text"
        android:textSize="50sp"
        android:layout_marginBottom="50dp"/>



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/l_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/l_password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/l_login_button"
        android:onClick="clickOnLogin"/>

    <Button
        android:id="@+id/l_register_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:text="@string/register"
        android:textSize="10dp"
        android:onClick="clickOnRegister"/>

    <Button
        android:id="@+id/l_forget_password_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:text="@string/forgot_your_password"
        android:textSize="10dp"
        android:onClick="clickOnForgotPassword"/>

</LinearLayout>