<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/register_activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:id="@+id/r_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/r_login_text"
        android:textSize="50sp"
        android:layout_marginBottom="50dp"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/r_login" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/r_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/r_password"
        android:hint="password"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:id="@+id/l_login_button"
        android:onClick="clickOnRegister"/>

</LinearLayout>