<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/s_linear_settings"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/s_linear_contact_userbar"
        android:gravity="center"
        android:padding="10dp">
        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/s_user_bg">

            <TextView
                android:id="@+id/s_user_letter_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🐟"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="🐟🐟🐟🐟🐟🐟🐟🐟🐟🐟"
            android:id="@+id/s_text_user"
            android:textSize="18dp"
            android:padding="5dp" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/s_linear_settings_infos"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_id"
                android:id="@+id/s_text_id_user"
                android:textSize="15dp">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/unknown"
                android:id="@+id/s_id_user"
                android:textSize="18dp"
                android:layout_weight="1"
                android:onClick="copyID"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/s_logout"
                android:text="@string/logout"
                android:layout_marginBottom="15dp"
                android:onClick="logout"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>